--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "truffle": "^5.4.17",
     "truffle-hdwallet-provider": "^1.0.17"
   }
 }
