--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "truffle": "^5.4.17",
+    "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17"
   }
 }
